removing prettier trailing slash on empty elements

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta
       name="description"
       content="Digital solutions agency for growth business"
-    />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    >
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" >
     <title>Egency</title>
-    <link rel="stylesheet" href="./styles/shared.css" />
-    <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./styles/shared.css" >
+    <link rel="stylesheet" href="./styles/main.css" >
   </head>
   <body>
     <header class="header">
@@ -35,21 +35,25 @@
       </nav>
 
       <input
-      type="checkbox"
-      class="mobile-check"
-      aria-label="Open the mobile nav "
-      />
+        type="checkbox"
+        class="mobile-check"
+        aria-label="Open the mobile nav "
+      >
       <nav class="mobile-nav">
         <ul class="mobile-nav__list">
           <li class="mobile-nav__item">
             <a href="./index.html">
-              <img src="./images/home.svg" alt="home icon" />
+              <img src="./images/home.svg" 
+                   alt="home icon" 
+              >
               <span>Home</span>
             </a>
           </li>
           <li class="mobile-nav__item">
             <a href="./pages/about.html">
-                <img src="./images/about.svg" alt="about icon" />
+                <img src="./images/about.svg" 
+                     alt="about icon" 
+                >
                 <span>About</span>
             </a>
           </li>
@@ -72,14 +76,12 @@
                 <button class="btn">Sign up</button>
             </li>
             <li class="hero__item">
-                <img 
-                src="./images/hero-img.jpg 420w"
-                srcset="./images/hero-img-small.jpg 760w,
-                        ./images/hero-img.jpg 1000w"
-                alt="Digial marketing" />
+                <img src="./images/hero-img.jpg 420w"
+                     srcset="./images/hero-img-small.jpg 760w,
+                             ./images/hero-img.jpg 1000w"
+                      alt="Digial marketing" 
+                >
             </li>
-            <!-- sizes="(max-width:760px) 300px,
-            (min-width:760px) 420px"  -->
         </ul>
       </div>
     </section>
@@ -92,20 +94,24 @@
                      alt="Digital marketing icon"
 
                 >
-                <!-- width="150"
-                height="150" -->
                 <p>Digital Marketing</p>
             </li>
             <li class="information__item">
-                <img src="./images/web-development-min.svg" alt="Web development icon">
+                <img src="./images/web-development-min.svg" 
+                     alt="Web development icon"
+                >
                   <p>Web Development</p>
             </li>
             <li class="information__item">
-                <img src="./images/mobile-development-min.svg" alt="Mobile development icon">
+                <img src="./images/mobile-development-min.svg" 
+                     alt="Mobile development icon"
+                >
                   <p>Mobile Development</p>
             </li>
             <li class="information__item">
-                <img src="./images/search-engine-optimization-min.svg" alt="Search Engine Optimization icon">
+                <img src="./images/search-engine-optimization-min.svg" 
+                     alt="Search Engine Optimization icon"
+                >
                   <p>SEO</p>
             </li>
         </ul>
