--- a/pages/about.html
+++ b/pages/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="More information about Egency" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="description" content="More information about Egency" >
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" >
     <title>About Us</title>
-    <link rel="stylesheet" href="./../styles/shared.css" />
-    <link rel="stylesheet" href="./../styles/about.css" />
+    <link rel="stylesheet" href="./../styles/shared.css" >
+    <link rel="stylesheet" href="./../styles/about.css" >
   </head>
   <body>
     <header class="header">
@@ -35,18 +35,18 @@
         type="checkbox"
         class="mobile-check"
         aria-label="Open the mobile nav "
-      />
+      >
       <nav class="mobile-nav">
         <ul class="mobile-nav__list">
           <li class="mobile-nav__item">
             <a href="./../index.html">
-              <img src="./../images/home.svg" alt="home icon" />
+              <img src="./../images/home.svg" alt="home icon" >
               <span>Home</span>
             </a>
           </li>
           <li class="mobile-nav__item">
             <a href="./about.html">
-              <img src="./../images/about.svg" alt="about icon" />
+              <img src="./../images/about.svg" alt="about icon" >
               <span>About</span>
             </a>
           </li>
@@ -62,7 +62,7 @@
       <img
         src="./../images/about-hero.png"
         alt="Some of our clients all over the world"
-      />
+      >
       <article>
         <h2>Who are we?</h2>
         <p>
