adding signup page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           <li class="desktop-nav__item">
             <a href="./pages/about.html" class="desktop-nav__link"> About</a>
           </li>
+          <li class="desktop-nav__item">
+            <a href="./pages/contact.html" class="desktop-nav__link"> Sign Up</a>
+          </li>
         </ul>
       </nav>
 
@@ -57,6 +60,14 @@
                 <span>About</span>
             </a>
           </li>
+          <li class="mobile-nav__item">
+            <a href="./pages/contact.html">
+                <img src="./images/signup.svg" 
+                     alt="sing up icon" 
+                >
+                <span>Sign Up</span>
+            </a>
+          </li>
         </ul>
       </nav>
 
@@ -73,7 +84,7 @@
                   embed the right policies, processes, training, and culture changes to drive digital 
                   adoption.
                 </p>
-                <button class="btn">Sign up</button>
+                <a href="./pages/contact.html"><button class="btn">Sign up</button></a>
             </li>
             <li class="hero__item">
                 <img src="./images/hero-img.jpg 420w"
@@ -137,9 +148,11 @@
         </li>
         
         <li class="action__item">
-          <button class="btn ">
-            Sign up
-          </button>
+          <a href="./pages/contact.html">
+            <button class="btn ">
+              Sign up
+            </button>
+          </a>
         </li>
       </ul>
     </section>
