--- a/pages/about.html
+++ b/pages/about.html
@@ -28,6 +28,9 @@
           <li class="desktop-nav__item">
             <a href="./about.html" class="desktop-nav__link"> About</a>
           </li>
+          <li class="desktop-nav__item">
+            <a href="./contact.html" class="desktop-nav__link"> Sign Up</a>
+          </li>
         </ul>
       </nav>
 
@@ -48,6 +51,14 @@
             <a href="./about.html">
               <img src="./../images/about.svg" alt="about icon" >
               <span>About</span>
+            </a>
+          </li>
+          <li class="mobile-nav__item">
+            <a href="./contact.html">
+                <img src="./../images/signup.svg" 
+                     alt="sing up icon" 
+                >
+                <span>Sign Up</span>
             </a>
           </li>
         </ul>
